// Generated by gen-tool
// DO NOT EDIT!
syntax = "proto3";

package config;

enum FieldType {
    typeInt32 = 0;
    typeInt64 = 1;
    typeFloat32 = 2;
    typeFloat64 = 3;
    typeBool = 4;
    typeString = 5;
    typeClass = 6;
    typeEnum = 7;
    typeDateTime = 8;
    typeColor = 9;
}
enum ConfigType{
    typeList = 0;
    typeMap = 1;
}
message ConfigLine{
	repeated string content = 1;
}
message ConfigContent{
    repeated ConfigLine content = 1;
}
message ConfigFieldInfo{
    string name = 1;
    FieldType type = 2;
    bool isList = 3;
    string parameter = 4;
}
message ConfigEnumElementInfo{
    string name = 1;
    int32 value = 2;
}
message ConfigEnumInfo{
    string name = 1;
    repeated ConfigEnumElementInfo value = 2;
}
message ConfigTable{
    ConfigType type = 1;
    string  keyFieldName = 2;
    repeated ConfigFieldInfo fieldInfoList = 3;
    repeated ConfigEnumInfo enumInfoList = 4;
    repeated ConfigLine content = 5;
    string packageName = 6;
    string configName = 7;
}
	

